small additions while testing the client. Added some test resources...